# robot_recorder

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  setup.py
doc/: index.html
doc/recordings/: test_move.json
docs/: index.html  index_to_gif.html  tb3_burger.html  tb3_burger_to_gif.html
docs/html_imports/: viewer_deps.html
docs/html_imports/js/: RobotRecordLoader.js
docs/js/: RobotRecordLoader.js
docs/recordings/: test_move.json  tf_test.json
docs/urdf/: turtlebot3_burger_colored.urdf
js/: RobotRecordLoader.js
launch/: record.launch
recordit/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
recordit/launch/: record.launch  tb3_example_record.launch  tf_record.launch
recordit/scripts/: recordit  robot_recorder_node  throttle_joints_by_change
recordit/src/recordit/: client.py  recorder.py  ros_recorder.py  track.py
recordit/test/: recordit.test  simple_robot.urdf  test_recordit.py
robot_recorder/: CHANGELOG.rst  CMakeList.txt  CMakeLists.txt  package.xml
robot_recorder_core/: CMakeLists.txt  package.xml  setup.py
robot_recorder_core/launch/: record.launch  tb3_example_record.launch
robot_recorder_core/scripts/: robot_recorder_node
robot_recorder_core/src/robot_recorder_core/: recorder.py
rviz_recorder_buttons/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
rviz_recorder_buttons/src/: record_panel.cpp  record_panel.h  record_widget.cpp  record_widget.h
rviz_recorder_buttons/src/ui/: record_widget.ui
scripts/: record_robot
src/robot_recorder/: recorder.py
