<?xml version="1.0"?>
<package format="2">
  <name>recordit</name>
  <version>1.0.0</version>
  <description>Record the joint_states and/or the mobile changes (via tf) of a ROS system as three.js animation</description>

  <author email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</author>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-enum34</exec_depend>
  <exec_depend>python-simplejson</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>

</package>
