<?xml version="1.0"?>
<package>
  <name>robot_recorder</name>
  <version>1.0.0</version>
  <description>Meta package that contains all essential packages for the robot recorder.</description>

  <author email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</author>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_recorder_core</run_depend>

  <export>
    <metapackage/>
  </export>
</package>