<?xml version="1.0"?>
<package format="2">
  <name>rviz_recorder_buttons</name>
  <version>1.0.1</version>
  <description>The rviz_recorder_buttons package</description>

  <maintainer email="scoopysqy@gmail.com">shi</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>actionlib</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
   <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
